[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "pagarmeapisdk"
description = "Pagarme API"
version = "6.8.14"
requires-python = ">=3.7"
authors = [{name = "Pagar.me Pagamentos S/A", email = "suporte@pagar.me"}]
dependencies = ["apimatic-core~=0.2.0, >= 0.2.15", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6", "python-dateutil~=2.8.1"]
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
